 * Deprecated PosteriorRandomVector
 * Deprecated MonteCarlo, ImportanceSampling, QuasiMonteCarlo, RandomizedQuasiMonteCarlo, RandomizedLHS classes
 * Made MatrixImplementation::isPositiveDefinite const and removed its argument
 * Renamed EfficientGlobalOptimization::setAIETradeoff to setAEITradeoff
 * Deprecated PlatformInfo::GetConfigureCommandLine.

=== Python module ===

=== Miscellaneous ===
 * Changed bounds evaluation in UniformFactory, BetaFactory

=== Bug fixes ===
 * #890 (Cannot build triangular distribution)
 * #891 (Viewer issue with Pairs drawables)
 * #896 (Python iteration in ProcessSample leads to capacity overflow)
 * #897 (Bug in Graph::draw with small data)
 * #898 (Could not save/load some persistent classes)
 * #899 (PythonDistribution copula crash when parallelism is active)
 * #905 (Bogus MaternModel::setParameter)
 * #906 (t_LevelSetMesher_std fails on most non-Intel based chips)

== 1.9 release (2017-04-18) == #release-1.9

=== Library ===

==== Major changes ====
 * Integrate otlhs module
 * New function API
 * Canonical format low-rank tensor approximation
 * EGO global optimization algorithm

==== New classes ====
 * SpaceFillingPhiP, SpaceFillingMinDist, SpaceFillingC2
 * LinearProfile, GeometricProfile
 * MonteCarloLHS, SimulatedAnnealingLHS
 * LHSResult
 * MultiStart
 * MethodOfMomentsFactory
 * SymbolicFunction, AggregatedFunction, ComposedFunction, DatabaseFunction, DualLinearCombinationFunction
 * LinearCombinationFunction, LinearFunction, QuadraticFunction, ParametricFunction, IndicatorFunction
 * DistributionTransformation
 * GeneralizedExtremeValue
 * UniVariateFunctionFamily, UniVariateFunctionFactory, TensorizedUniVariateFunctionFactory
 * MonomialFunction, MonomialFunctionFactory
 * KarhunenLoeveSVDAlgorithm
 * RankMCovarianceModel
 * SparseMethod
 * CanonicalTensorEvaluation|Gradient, TensorApproximationAlgorithm|Result
 * GaussLegendre
 * EfficientGlobalOptimization

==== API changes ====