@@ -18,7 +18,7 @@ ot_add_source_file (ARMAFactory.cxx)
 ot_add_source_file (WhittleFactory.cxx)
 ot_add_source_file (WhittleFactoryState.cxx)
 ot_add_source_file (ARMALikelihoodFactory.cxx)
-ot_add_source_file (ConditionedNormalProcess.cxx)
+ot_add_source_file (ConditionedGaussianProcess.cxx)
 ot_add_source_file (KarhunenLoeveQuadratureAlgorithm.cxx)
 
 ot_install_header_file (OTProcess.hxx)
@@ -37,5 +37,5 @@ ot_install_header_file (ARMAFactory.hxx)
 ot_install_header_file (WhittleFactory.hxx)
 ot_install_header_file (WhittleFactoryState.hxx)
 ot_install_header_file (ARMALikelihoodFactory.hxx)
-ot_install_header_file (ConditionedNormalProcess.hxx)
+ot_install_header_file (ConditionedGaussianProcess.hxx)
 ot_install_header_file (KarhunenLoeveQuadratureAlgorithm.hxx)
