@@ -1,3 +1,3 @@
-process = class=ConditionedNormalProcess, mesh=class=Mesh name=Unnamed dimension=1 vertices=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=1 dimension=1 description=[t] data=[[0]] simplices=[], trend=class=TrendTransform evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x0] outputVariablesNames=[y0] formulas=[0.0], covariance=class=ExponentialModel scale=class=Point name=Unnamed dimension=1 values=[1] amplitude=class=Point name=Unnamed dimension=1 values=[1] spatial correlation=class=CorrelationMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1] isDiagonal=true, conditional covariance =class=TriangularMatrix dimension=0 implementation=class=MatrixImplementation name=Unnamed rows=0 columns=0 values=[]
+process = class=ConditionedGaussianProcess, mesh=class=Mesh name=Unnamed dimension=1 vertices=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=1 dimension=1 description=[t] data=[[0]] simplices=[], trend=class=TrendTransform evaluation=class=SymbolicEvaluation name=Unnamed inputVariablesNames=[x0] outputVariablesNames=[y0] formulas=[0.0], covariance=class=ExponentialModel scale=class=Point name=Unnamed dimension=1 values=[1] amplitude=class=Point name=Unnamed dimension=1 values=[1] spatial correlation=class=CorrelationMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1] isDiagonal=true, conditional covariance =class=TriangularMatrix dimension=0 implementation=class=MatrixImplementation name=Unnamed rows=0 columns=0 values=[]
 realization = class=Field name=Unnamed description=[v0,v1,y0] implementation=class=FieldImplementation name=Unnamed mesh=class=Mesh name=Unnamed dimension=2 vertices=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=5 dimension=2 data=[[1,0],[2,0],[2,1],[1,1],[1.5,0.5]] simplices=[[0,1,4],[1,2,4],[2,3,4],[3,0,4]] values=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=5 dimension=1 description=[y0] data=[[0.878],[0.54],[1.39],[1.73],[1.22]]
 Mean over 5000 realizations = class=Field name=Unnamed description=[v0,v1,y0] implementation=class=FieldImplementation name=Unnamed mesh=class=Mesh name=Unnamed dimension=2 vertices=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=5 dimension=2 data=[[1,0],[2,0],[2,1],[1,1],[1.5,0.5]] simplices=[[0,1,4],[1,2,4],[2,3,4],[3,0,4]] values=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=5 dimension=1 description=[y0] data=[[0.878],[0.54],[1.4],[1.73],[1.23]]
