@@ -499,7 +499,7 @@ ot_add_python_module(model_process model_process_module.i
                       WhittleFactoryState.i WhittleFactoryState_doc.i.in
                       ARMALikelihoodFactory.i  ARMALikelihoodFactory_doc.i.in  
                       ARMAFactory.i ARMAFactory_doc.i.in
-		      ConditionedNormalProcess.i ConditionedNormalProcess_doc.i.in
+		      ConditionedGaussianProcess.i ConditionedGaussianProcess_doc.i.in
 		      KarhunenLoeveQuadratureAlgorithm.i KarhunenLoeveQuadratureAlgorithm_doc.i.in                
                       UncertaintyProcessTemplateDefs.i
                    )
